@@ -47,6 +47,7 @@ What's new in this release:
      files or directories that have allready been renamed or moved as such.
      (Gary van der Merwe)
    * It is now possible to remove files from the branch. (Gary van der Merwe)
+   * Show blank icon for missing files. (Bug #418471, Gary van der Merwe)
  * qcommit/uncommit:
    * Catch AttributeError in save of commit_data during qcommit and/or uncommit 
      in lightweight checkout from branch accessed via smart-server 
